@@ -1,3 +1,12 @@
+2005-11-01  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* lily/main.cc (setup_paths)[!__MINGW32__]: Bugfix: if argv0 is
+	not absolute, make it absolute using PATH.
+
+2005-10-28  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* python/midi.c (initmidi): Fix type for mingw.
+
 2005-10-27  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* stepmake/stepmake/compile-vars.make (SHARED_FLAGS): Support mingw.
